[gd_scene load_steps=8 format=3 uid="uid://bpu4eexbhm1e7"]

[ext_resource type="Script" uid="uid://dv3e1x3knx7hf" path="res://src/scripts/tutorial.gd" id="1_io05x"]
[ext_resource type="Texture2D" uid="uid://d4jeuxr50sjgg" path="res://assets/visuals/movement_guide.png" id="2_ihko7"]
[ext_resource type="FontFile" uid="uid://c1vtk4es625tx" path="res://assets/visuals/fonts/EXEPixelPerfect.ttf" id="3_gqjuj"]
[ext_resource type="Texture2D" uid="uid://b7yibd7vu2s0m" path="res://assets/visuals/mining_guide.png" id="4_l4gex"]
[ext_resource type="PackedScene" uid="uid://2d3n31s7uoax" path="res://src/scenes/composables/timeout_callback.tscn" id="5_l4gex"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gqjuj"]
atlas = ExtResource("2_ihko7")
region = Rect2(4, 5, 39, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4gex"]
atlas = ExtResource("4_l4gex")
region = Rect2(1, 0, 22, 32)

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_io05x")

[node name="PlayerMovementGuide" type="Node2D" parent="."]
visible = false
position = Vector2(16, 0)

[node name="GreenToBlueWrapper" type="Node2D" parent="PlayerMovementGuide"]
position = Vector2(-8, 13)
scale = Vector2(0.61, 0.61)

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerMovementGuide/GreenToBlueWrapper"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -86.0
offset_right = 44.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="PlayerMovementGuide/GreenToBlueWrapper/VBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_gqjuj")
expand_mode = 5
stretch_mode = 4

[node name="Label" type="Label" parent="PlayerMovementGuide/GreenToBlueWrapper/VBoxContainer/TextureRect"]
layout_mode = 0
offset_left = -5.0
offset_top = 12.0
offset_right = 531.0
offset_bottom = 324.0
theme_override_constants/line_spacing = -20
theme_override_fonts/font = ExtResource("3_gqjuj")
theme_override_font_sizes/font_size = 16
text = "       s
   a      d
       w"

[node name="Label" type="Label" parent="PlayerMovementGuide/GreenToBlueWrapper/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_gqjuj")
text = "to move"
horizontal_alignment = 1

[node name="MiningGuide" type="Node2D" parent="."]
visible = false
position = Vector2(16, -15)

[node name="GreenToBlueWrapper" type="Node2D" parent="MiningGuide"]
position = Vector2(-8, 13)
scale = Vector2(0.61, 0.61)

[node name="VBoxContainer" type="VBoxContainer" parent="MiningGuide/GreenToBlueWrapper"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -86.0
offset_right = 44.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MiningGuide/GreenToBlueWrapper/VBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_l4gex")
expand_mode = 4
stretch_mode = 5

[node name="Label" type="Label" parent="MiningGuide/GreenToBlueWrapper/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_gqjuj")
text = "to mine"
horizontal_alignment = 1

[node name="ForgeGuide" type="CanvasLayer" parent="."]

[node name="NavigationGuide" type="MarginContainer" parent="ForgeGuide"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.5
offset_right = 56.5
offset_bottom = 23.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="ForgeGuide/NavigationGuide"]
layout_mode = 2

[node name="Label" type="Label" parent="ForgeGuide/NavigationGuide"]
layout_mode = 2
text = " scroll to zoom"
horizontal_alignment = 1

[node name="RetryGuide" type="MarginContainer" parent="ForgeGuide"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -249.0
offset_top = -194.0
offset_right = -112.0
offset_bottom = -145.0
grow_horizontal = 0
grow_vertical = 0

[node name="Panel" type="Panel" parent="ForgeGuide/RetryGuide"]
layout_mode = 2

[node name="Label" type="Label" parent="ForgeGuide/RetryGuide"]
layout_mode = 2
text = "select the level 
you want to try ->"
horizontal_alignment = 1

[node name="PurchaseGuide" type="MarginContainer" parent="ForgeGuide"]
anchors_preset = -1
anchor_top = 0.007
anchor_bottom = 0.007
offset_left = -98.0
offset_top = -39.036
offset_right = 101.0
offset_bottom = -16.036
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(98, 11.5)
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="ForgeGuide/PurchaseGuide"]
layout_mode = 2

[node name="Label" type="Label" parent="ForgeGuide/PurchaseGuide"]
layout_mode = 2
text = "click to purchase upgrade"
horizontal_alignment = 1

[node name="TimeoutCallback" parent="." instance=ExtResource("5_l4gex")]
